work on clipping, fixed problem with firefox.

--- a/src/app/beaker/beaker.component.css
+++ b/src/app/beaker/beaker.component.css
@@ -1,12 +1,3 @@
-.empty {
-    border: 5px dashed #888;
-    background-color: #aaa;
-}
-
-/* .layer {
-    background-color: #559;
-}
- */
 .component {
     background-color: #5a5;
     text-align: center;
@@ -25,22 +16,11 @@
 }
 
 .glass {
-    /* outline: 2px dashed black; */
-    padding-left: 0px;
-    padding-right: 0px;
-    padding-bottom: 0px;
-    padding-top: 0px;
     background-image: url(../../assets/beaker.svg);
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% 100%;
 }
 
 .glass-clip {
-    padding-left: 0px;
-    padding-right: 0px;
-    padding-bottom: 0px;
-    padding-top: 0px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    clip-path: polygon(3% 3%, 97% 3%, 91% 98%, 9% 98%, 3% 3%);
+    clip-path: url(#clipping-path-2);
+    /* clip-path: polygon(4.5% 4.5%, 7.5% 96%, 92.5% 96%, 95.5% 4.5%, 4.5% 4.5%); */
 }
